Progressed on port from dotnet to java